--- a/jblog03/src/main/webapp/assets/js/ejs/list-template.ejs
+++ b/jblog03/src/main/webapp/assets/js/ejs/list-template.ejs
@@ -2,14 +2,12 @@
 	for(var i = 0; i < data.length; i++) {
 		var vo = data[i]; 
 %>
-<tr>
-	<td><%=data.length-i%></td>
-	<td><%=vo.name%></td>
+<tr data-no='<%=vo.no%>'>
+	<td><%=i+1%></td>
+	<td>><%=vo.name%></td>
 	<td><%=vo.numberOfPost%></td>
 	<td><%=vo.description%></td>
-	<td><a href="${pageContext.request.contextPath }/${authUser.id}/delete/${vo.no}/${vo.name}"
-	class="del">
-	<img src="${pageContext.request.contextPath}/assets/images/delete.png"></a>
+	<td><button id='cat-del' value='<%=vo.no%>'><img src="<%=data.image%>"></button>
 	</td>
 </tr>
 <%
