--- a/jblog03/src/main/webapp/assets/js/ejs/list-template.ejs
+++ b/jblog03/src/main/webapp/assets/js/ejs/list-template.ejs
@@ -2,9 +2,9 @@
 	for(var i = 0; i < data.length; i++) {
 		var vo = data[i]; 
 %>
-<tr data-no='<%=vo.no%>'>
+<tr id='aaa' data-no='<%=vo.no%>'>
 	<td><%=i+1%></td>
-	<td>><%=vo.name%></td>
+	<td><%=vo.name%></td>
 	<td><%=vo.numberOfPost%></td>
 	<td><%=vo.description%></td>
 	<td><button id='cat-del' value='<%=vo.no%>'><img src="<%=data.image%>"></button>
@@ -13,3 +13,4 @@
 <%
 	}
 %>
+
